Bug 167362 - LibreOffice crashes for zoomtext and jaws users when the cursor is on the same line as a footnote.
Summary: LibreOffice crashes for zoomtext and jaws users when the cursor is on the sam...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.7.2 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords: accessibility
Depends on:
Blocks: Footnote-Endnote
  Show dependency treegraph
 
Reported: 2025-07-03 08:01 UTC by ianhruday
Modified: 2025-12-10 08:31 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
This is a sample document with one footnote and a description of the bug. (12.82 KB, application/vnd.oasis.opendocument.text)
2025-07-16 07:53 UTC, ianhruday
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ianhruday 2025-07-03 08:01:09 UTC

    
Comment 1 ianhruday 2025-07-03 08:07:02 UTC
I'm a Zoomtext and Jaws user. I created a document with a footnote and now the program crashes whenever the cursor is on the same line as the footnote in the main body of the document. I've tried upgrading to the latest stable release of LibriOffice 25.2, but this hasn't fixed the issue. Prior to that I was using LibreOffice 24.8. I've tried alternately disabling Jaws and Zoomtext, but this hasn't fixed the issue. I cannot test the bug with both disabled.
Comment 2 mikhail.machine 2025-07-14 08:01:20 UTC
Hello ianhruday@gmail.com,

Thank you for reporting the bug. Please attach a sample document, as this makes it easier for us to verify the bug. I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the requested document is provided.
(Please note that the attachment will be public; remove any sensitive information before attaching it. 

See <https://wiki.documentfoundation.org/QA/FAQ#sanitize> for help on how to do so.)
Comment 3 ianhruday 2025-07-16 07:53:08 UTC
Created attachment 201818 [details]
This is a sample document with one footnote and a description of the bug.
Comment 4 ianhruday 2025-07-16 07:55:42 UTC
The document should be uploaded now. Sorry it took me so long to get back to you.
Comment 5 Commit Notification 2025-11-28 08:57:32 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e3a9530f294f9c978a46da43a4a1420644158984

tdf#167362 sw: fix footnote hang with JAWS

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Stahl 2025-11-28 09:03:08 UTC
fixed (only tested with 24.2 based downstream branch)
Comment 7 Commit Notification 2025-11-28 11:36:51 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/5251f4a13ad950e40d97ff24be23f11fb64bccd0

tdf#167362 sw: fix footnote hang with JAWS

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Gabor Kelemen (Collabora) 2025-12-10 08:31:00 UTC
Does not hang for me in yesterdays nightly:

Version: 26.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 24; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded